[package]
name = "macroquad_game"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = {git = "https://github.com/not-fl3/macroquad.git"}
hecs = "0.5.1"
nanoserde = "0.1.25"